--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Funabori Super League</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/css/style.css?20220213-002">
+    <link rel="stylesheet" href="../assets/css/style.css?20220213-002">
     <!-- <meta http-equiv="refresh"
         content="0; url = http://127.0.0.1:5500/tables/" />  -->
 </head>
@@ -15,7 +15,7 @@
     <section class="home shadow" id="app">
         <div class="container-fluid p-0 banner">
             <div class="banner-text">
-                <img src="/assets/img/fifa.png" alt="">
+                <img src="../assets/img/fifa.png" alt="">
                 <h1>Funabori Super League</h1>
             </div>
         </div>
@@ -24,7 +24,7 @@
                 <ul class="nav nav-tabs mb-3">
                     <li class="nav-item">
                         <span class="nav-link active" @click="getMatches">
-                            <img src="/assets/img/premier-league.png" alt="">
+                            <img src="../assets/img/premier-league.png" alt="">
                             Premier league
                         </span>
                     </li>
@@ -79,6 +79,6 @@
         </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
-    <script src="/assets/js/home.js?20220213-002"></script>
+    <script src="../assets/js/home.js?20220213-002"></script>
 </body>
 </html>
