--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css?20220216-001">
+    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
     <meta http-equiv="refresh"
-        content="0; url = /premier-league" /> 
+        content="0; url = ../premier-league" /> 
 </head>
 <body>
-    
+
 </body>
 </html>
