--- a/premier-league/index.html
+++ b/premier-league/index.html
@@ -7,6 +7,7 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/css/style.css?20220216-001">
+    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
     <!-- <meta http-equiv="refresh"
         content="0; url = http://127.0.0.1:5500/tables/" />  -->
 </head>
