--- a/premier-league/index.html
+++ b/premier-league/index.html
@@ -6,8 +6,8 @@
     <title>Funabori Super League</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/css/style.css?20220216-001">
-    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
+    <link rel="stylesheet" href="../assets/css/style.css?20220216-001">
+    <link rel="icon" type="image/x-icon" href="../assets/img/favicon.ico">
     <!-- <meta http-equiv="refresh"
         content="0; url = http://127.0.0.1:5500/tables/" />  -->
 </head>
@@ -15,15 +15,15 @@
 
     <section class="premier-league shadow" id="app">
         <div class="container-fluid p-0 banner">
-            <img src="/assets/img/banner.jpg" alt="">
+            <img src="../assets/img/banner.jpg" alt="">
             <div class="banner-text">
-                <img src="/assets/img/fifa.png" alt="">
+                <img src="../assets/img/fifa.png" alt="">
                 <h1>Funabori Super League</h1>
             </div>
         </div>
         <div class="container video-section py-5">
             <div class="header mb-5 py-3">
-                <img src="/assets/img/premier-league.png" alt="">
+                <img src="../assets/img/premier-league.png" alt="">
                             Premier League
             </div>
             
@@ -41,7 +41,7 @@
                     </div>
                     <div class="detail-info p-2">
                         <span class="dropdown">
-                            <img src="/assets/img/p4-controller.png" alt="">
+                            <img src="../assets/img/p4-controller.png" alt="">
                             <span class="team" data-bs-toggle="dropdown">
                                 {{match.home}} {{match.hGoal}} : {{match.aGoal}} {{match.away}}
                             </span>
@@ -66,7 +66,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="/assets/js/variable.js"></script>
-    <script src="/assets/js/premier-league.js?20220215-001"></script>
+    <script src="../assets/js/variable.js"></script>
+    <script src="../assets/js/premier-league.js?20220215-001"></script>
 </body>
 </html>
