redirect error fixed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/style.css?20220216-001">
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
     <meta http-equiv="refresh"
-        content="0; url = ../premier-league" /> 
+        content="0; url = /../premier-league" /> 
 </head>
 <body>
 
