image resize and v-cloak added

--- a/premier-league/index.html
+++ b/premier-league/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-    <section class="premier-league shadow" id="app">
+    <section class="premier-league shadow" id="app" v-cloak>
         <div class="container-fluid p-0 banner">
             <img src="../assets/img/banner.jpg" alt="">
             <div class="banner-text">
@@ -21,7 +21,7 @@
                 <h1>Funabori Super League</h1>
             </div>
         </div>
-        <div class="container video-section py-5">
+        <div class="container video-section py-3">
             <div class="header mb-5 py-3">
                 <img src="../assets/img/premier-league.png" alt="">
                             Premier League
