--- a/premier-league/index.html
+++ b/premier-league/index.html
@@ -6,7 +6,7 @@
     <title>Funabori Super League</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../assets/css/style.css?20220216-001">
+    <link rel="stylesheet" href="../assets/css/style.css?20220302-001">
     <link rel="icon" type="image/x-icon" href="../assets/img/favicon.ico">
     <!-- <meta http-equiv="refresh"
         content="0; url = http://127.0.0.1:5500/tables/" />  -->
@@ -44,20 +44,23 @@
                     <label for="searchByTeam">Team</label>
                     <select name="" id="searchByTeam" class="form-select" v-model="keyWordByTeam" @change="search">
                         <option value="">Select</option>
-                        <option :value="info.team" v-for="info in premierLeagueData">{{info.team}}</option>
+                        <option :value="info.team" v-for="info in searchDataTeam">{{info.team}}</option>
                     </select>
                 </div>
                 <div class="col search-player">
                     <label for="searchByPlayer">Player</label>
                     <select name="" id="searchByPlayer" class="form-select" v-model="keyWordByPlayer" @change="search">
                         <option value="">Select</option>
-                        <option :value="info.name" v-for="info in premierLeagueData">{{info.name}}</option>
+                        <option :value="info.name" v-for="info in searchDataPlayer">{{info.name}}</option>
                     </select>
                 </div>
             </div>
             
             <!-- MATCH -->
-            <div class="row g-3 mb-5 px-3 match-data" v-for="data in matchData">
+            <div v-if="!matchData.length" class="row g-3 mb-5 px-3 match-data" > 
+                <span class="d-block text-center"> No Data</span> 
+            </div>
+            <div v-if="matchData" class="row g-3 mb-5 px-3 match-data" v-for="data in matchData">
                 <h4 class="mb-0 week">{{data.week}}</h4>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 youtube" v-for="match in data.matchList">
                     <div class="video">
@@ -94,7 +97,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="../assets/js/variable.js?20220220-001"></script>
-    <script src="../assets/js/premier-league.js?20220220-001"></script>
+    <script src="../assets/js/variable.js?20220302-002"></script>
+    <script src="../assets/js/premier-league.js?20220302-001"></script>
 </body>
 </html>
